# simple-database

./: .gitignore  CMakeLists.txt  README.md  launch.json  test.sdb
include/: sdb.hpp
src/: sdb.cpp
test/: CMakeLists.txt  test.cpp
